
- Added StyleEditor.invokeForCaret(textArea) which does same as
  buffer.editSyntaxStyle(textArea) did, but can be invoked without
  specifying the buffer object carefully. (Kazutoshi Satoda)

- HistoryModel's max size is no more defined globally : replaced the static
  max variable by a per-instance max variable and a static defaultMax variable
  (Eric Le Lay)
  
- The JeditBuffer class now have thread-safe getText() params-less convenience 
  method (Vadim Voituk)

}}}
{{{ Editing

- Added haxe.xml mode file to support haXe language (Dion Whitehead)

- When pasting text copied from the textarea, if the target textarea has
  no edit mode, the edit mode from the source is copied (Matthieu Casanova)

- Added the missing doxygen commands for doxygen v1.6.1
  (bug #2895272 - report and patch from Bernhard Walle).
  doxygen now highlights quoted strings in comments.

- Added url.xml mode (# 1991306 - Kevin Hunter)

- 'dot.xml' mode file indent{Open,Close}Brackets wrong
  (#3008614 - Robin Neatherway)

- Added logtalk.xml mode file (#1945284 - Paulo Moura)

- Added regex.xml mode file (#2782258 - Kevin Hunter)

- Added sip.xml mode file to read sip messages (Matthieu Casanova)

- New paste special action accessible from menu
  Edit->More clipboard->Paste Special that will suggest different mode to paste
  data from clipboard, currently plain text, rich jEdit text
  (plain text + edit mode) and mime type html are supported (Matthieu Casanova)

}}}
{{{ Miscellaneous

- It is now possible to copy several files in the VFS Browser at the same time,
  and copy from/to the OS explorer (Matthieu Casanova)

- Removed LatestVersion plugin.

- HelpViewer font can be configured via Appearance Option Pane. (#3002186 - Alan Ezust)

- Added actions for eating whitespace at word ends in both directions
  for findWordStart. (#1953341 - strank)

- Added a configurable selection foreground color. If set, this color will be